[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/key/key.gd" type="Script" id=1]
[ext_resource path="res://scenes/key/animKey.tres" type="Animation" id=2]
[ext_resource path="res://resources/Props/Key_Anim_8x8.png" type="Texture" id=3]
[ext_resource path="res://resources/sfx/checkpoint.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "unlock"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 0, 5.68434e-15 ), Vector2( 0, -10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("collisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -10 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 7 )

[sub_resource type="CircleShape2D" id=3]
radius = 58.3095

[node name="key" type="Area2D"]
script = ExtResource( 1 )

[node name="animationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = ExtResource( 2 )
anims/unlock = SubResource( 1 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 0, 5.68434e-15 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
hframes = 5

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="range" type="Area2D" parent="."]

[node name="collisionShape2D" type="CollisionShape2D" parent="range"]
shape = SubResource( 3 )

[node name="sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0
pitch_scale = 3.5
bus = "sfx"
[connection signal="body_entered" from="." to="." method="_on_key_body_entered"]
[connection signal="body_entered" from="range" to="." method="_on_range_body_entered"]
